--- a/alpha/flaskr/static/css/page-discussion.css
+++ b/alpha/flaskr/static/css/page-discussion.css
@@ -173,10 +173,6 @@ body.popup-open {
     overflow: hidden;
     background: rgba(0, 0, 0, 0.5);
 }
-
-
-
-
   
 .chat-input-container {
     position: absolute;
@@ -190,16 +186,24 @@ body.popup-open {
     border-radius: 10px;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
+}
   
+body.dark .chat-input-container{
+    background-color: #333;
+}
+
   .chat-input {
     flex: 1; /* prendre tout l'espace disponible */
     padding: 10px; /* ajouter un padding à l'intérieur de l'input */
     border: none; /* supprimer la bordure de l'input */
     border-radius: 10px; /* ajouter un radius pour arrondir les coins */
-  }
-  
-  .chat-send-button {
+}
+
+body.dark .chat-input{
+    background-color: #333;
+}
+
+.chat-send-button {
     margin-left: 10px; /* ajouter un espace entre l'input et le bouton */
     padding: 10px 20px; /* ajouter un padding au bouton */
     border: none; /* supprimer la bordure du bouton */
@@ -207,9 +211,11 @@ body.popup-open {
     background-color: #4CAF50; /* ajouter un background vert au bouton */
     color: #fff; /* ajouter un texte blanc au bouton */
     cursor: pointer; /* ajouter un curseur de pointeur au bouton */
-  }
+}
 
-
+body.dark .chat-send-button {
+    color: #333;
+}
 
 
 
@@ -240,15 +246,23 @@ body.popup-open {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+body.dark .chat-message{
+    background-color: #3c3a3ab5;
+}
+
 .username {
     font-weight: bold;
     margin-right: 10px;
 }
 
 .chat-message.you .username {
-    color: #337ab7; /* blue color for your username */
+    color: #337ab7; /* bleu pour votre nom d'utilisateur */
 }
 
 .chat-message:not(.you) .username {
-    color: #666; /* gray color for other users' usernames */
+    color: #262424; /* gris pour le nom des autres utilisateurs */
+}
+
+.chat-message-container small {
+    color: #999; /* couleur pour l'heure */
 }
