--- a/alpha/flaskr/templates/parametres.html
+++ b/alpha/flaskr/templates/parametres.html
@@ -71,7 +71,7 @@
                     <option value="de">Deutsch</option>
                 </select>
             </div>
-            <h3>Information Personnel</h3>
+            <h3>Informations Personnels</h3>
             <div class="setting-item">
                 <span class="setting-name">Date de Naissance</span>
                 <input type="date" value="0000-00-00" min="1950-01-01" max="2014-12-31">
