--- a/alpha/flaskr/static/css/page-parametre.css
+++ b/alpha/flaskr/static/css/page-parametre.css
@@ -228,7 +228,7 @@ body.dark .setting-item {
 }
 
 input:checked + .slider {
-  background-color: #2196F3;
+  background-color: #9dd3ff;
 }
 
 input:checked + .slider:before {
@@ -355,5 +355,64 @@ select:focus {
     1px 1.5em;
   background-repeat: no-repeat;
   border-color: green;
+  outline: 0;
+}
+
+body.dark .icone-friends {
+  filter: invert(1);
+}
+
+body.dark .icone-cam {
+  filter: invert(1);
+}
+
+body.dark .icone-discu {
+  filter: invert(1);
+}
+
+body.dark .icone-album {
+  filter: invert(1);
+}
+
+body.dark .icone-setting {
+  filter: invert(1);
+}
+
+
+
+
+
+body.dark input[type="text"], body.dark input[type="password"], body.dark input[type="date"] {
+  background-color: #444;
+  color: #fff;
+  border-color: #333;
+}
+
+body.dark input[type="text"]:focus, body.dark input[type="password"]:focus, body.dark input[type="date"]:focus {
+  border-color: #333;
+  box-shadow: 0 0 10px #444;
+}
+
+body.dark select {
+  background-color: #444;
+  color: #fff;
+  border-color: #333;
+}
+
+body.dark select:focus {
+  background-image:
+    linear-gradient(45deg, gray 50%, transparent 50%),
+    linear-gradient(135deg, transparent 50%, gray 50%),
+    linear-gradient(to right, #ccc, #ccc);
+  background-position:
+    calc(100% - 15px) 1em,
+    calc(100% - 20px) 1em,
+    calc(100% - 2.5em) 0.5em;
+  background-size:
+    5px 5px,
+    5px 5px,
+    1px 1.5em;
+  background-repeat: no-repeat;
+  border-color: #333;
   outline: 0;
 }
