changement app.py et discussion.html

--- a/alpha/flaskr/templates/discussion.html
+++ b/alpha/flaskr/templates/discussion.html
@@ -42,6 +42,13 @@
     </ul>
 
     <div class="chat-input-container">
+        <label for="image-input">
+          <button class="chat-send-button">
+              <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M2.5 0.5h10l2 2v10l-2 2h-10l-2-2v-10l2-2zm0 1l-1 1v10l1 1h10l1-1v-10l-1-1h-10zm4.5 1c1.374 0 2.5 1.126 2.5 2.5s-1.126 2.5-2.5 2.5-2.5-1.126-2.5-2.5 1.126-2.5 2.5-2.5zm0 1c-.828 0-1.5.672-1.5 1.5s.672 1.5 1.5 1.5 1.5-.672 1.5-1.5-.672-1.5-1.5-1.5zm-2 7c-.166 0-.328.03-.477.084-.296.103-.582.306-.8.616-.217.311-.423.735-.423 1.3h7.4c0-.565-.206-.989-.423-1.3-.218-.31-.504-.513-.8-.616-.149-.054-.311-.084-.477-.084h-3zm1.478 1c.069.002.219.009.477.116.258.107.482.274.646.5h-2.246c.164-.226.388-.393.646-.5.258-.107.408-.114.477-.116z" fill="currentColor"></path>
+              </svg>
+          </button>
+        </label>
         <input class="chat-input" type="text" placeholder="Tapez votre message...">
         <label for="input-btn">
             <button class="chat-send-button" id="input-btn">
