--- a/alpha/flaskr/templates/quests.html
+++ b/alpha/flaskr/templates/quests.html
@@ -404,7 +404,7 @@
     <h1 class="quetesapp">Quête du groupe/chat/perso IRL</h1>
     <ul>
         <ul>
-            <li><a href="#" onclick="return confirmLink('de La Belle Aventure', 'https://maps.google.com/maps?q=73 Rue Masséna, 59800 Lille')">La Belle Aventure, Lille, Bar</a></li>
+            <li><a class="no-link-style" href="#" onclick="return confirmLink('de La Belle Aventure', 'https://maps.google.com/maps?q=73 Rue Masséna, 59800 Lille')">La Belle Aventure, Lille, Bar</a></li>
         </ul>
 
     </ul>
