--- a/alpha/flaskr/templates/discussion.html
+++ b/alpha/flaskr/templates/discussion.html
@@ -17,10 +17,10 @@
         <div class="Name-page">Chat</div>
     </header>
 
-    <ul id="messages" class="p-3">
+    <!-- <ul id="messages" class="p-3">
         {% for message in messages %}
             {% if message.sender_id == current_user.id %}
-                <!-- Your message -->
+                >
                 <div class="chat-message-container-you">
                     <div class="chat-message you">
                         <small class="username">{{ message.format_created_at() }}</small>
@@ -29,7 +29,7 @@
                     </div>
                 </div>
             {% else %}
-                <!-- Other user's message -->
+                
                 <div class="chat-message-container">
                     <div class="chat-message">
                         <small class="username">{{ message.format_created_at() }}</small>
@@ -39,7 +39,24 @@
                 </div>
             {% endif %}
         {% endfor %}
-    </ul>
+    </ul> -->
+
+
+
+    <div class="centered-blocks">
+        <div class="block message"></div>
+        <div class="block response"></div>
+        <div class="block response"></div>
+        <div class="block message"></div>
+        <div class="block message"></div>
+        <div class="block response"></div>
+        <div class="block response"></div>
+        <div class="block message"></div>
+        <div class="block response"></div>
+    </div>
+
+
+    
 
     <div class="chat-input-container">
         <label for="image-input">
@@ -61,83 +78,89 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.2.0/socket.io.js"></script>
     <script>
-      var socket = io();
-      var user_id = "{{ current_user.id }}";  // Récupérer l'ID utilisateur depuis le serveur Flask
-      var userNames = {};  // Dictionnaire pour stocker les pseudos
+    //   var socket = io();
+    //   var user_id = "{{ current_user.id }}";  
+    //   var userNames = {};  
 
-      // Fonction pour charger les pseudos des utilisateurs
-      function loadUserNames() {
-          fetch("/api/usernames")  // Une route que vous devez créer pour obtenir les pseudos des utilisateurs
-              .then(response => response.json())
-              .then(data => {
-                  userNames = data;
-              });
-      }
+      
+    //   function loadUserNames() {
+    //       fetch("/api/usernames") 
+    //           .then(response => response.json())
+    //           .then(data => {
+    //               userNames = data;
+    //           });
+    //   }
 
-      loadUserNames();
+    //   loadUserNames();
 
-      var input = document.querySelector(".chat-input");
-      var sendButton = document.querySelector(".chat-send-button");
+    //   var input = document.querySelector(".chat-input");
+    //   var sendButton = document.getElementById("input-btn");
 
-      function sendMessage() {
-          if (input.value.trim() !== "") {
-              socket.emit("message", {
-                  text: input.value,
-                  sender_id: user_id,
-                  receiver_id: "{{ user_id }}"  // L'ID de l'utilisateur avec qui vous discutez
-              });
-              input.value = "";
-          }
-      }
+    //   function sendMessage() {
+    //       if (input.value.trim() !== "") {
+    //           socket.emit("message", {
+    //               text: input.value,
+    //               sender_id: user_id,
+    //               receiver_id: "{{ user_id }}"  
+    //           });
+    //           input.value = "";
+    //       }
+    //   }
 
-      // Événement pour l'envoi du message en cliquant sur le bouton
-      sendButton.addEventListener("click", function (e) {
-          e.preventDefault();
-          sendMessage();
-      });
+   
+    //   sendButton.addEventListener("click", function (e) {
+    //       e.preventDefault();
+    //       sendMessage();
+    //   });
 
-      // Événement pour l'envoi du message en appuyant sur "Entrée"
-      input.addEventListener("keypress", function (e) {
-          if (e.key === "Enter") {
-              e.preventDefault();
-              sendMessage();
-          }
-      });
 
-      socket.on("message", function (data) {
-          var messageContainer = document.createElement("div");
-          var currentTime = formatDateToLocalTime(data.created_at);
-          var senderName = userNames[data.sender_id] || "Unknown";
-          var timeElement = "<small class='username'>" + currentTime + "</small>";
+    //   input.addEventListener("keypress", function (e) {
+    //       if (e.key === "Enter") {
+    //           e.preventDefault();
+    //           sendMessage();
+    //       }
+    //   });
+
+    //   socket.on("message", function (data) {
+    //       var messageContainer = document.createElement("div");
+    //       var currentTime = formatDateToLocalTime(data.created_at);
+    //       var senderName = userNames[data.sender_id] || "Unknown";
+    //       var timeElement = "<small class='username'>" + currentTime + "</small>";
           
-          if (data.sender_id === user_id) {
-              // Votre message
-              messageContainer.classList.add("chat-message-container-you");
-              messageContainer.innerHTML = `
-                  <div class="chat-message you">
-                      ${timeElement}
-                      <span class="username">(You) ${senderName}:</span>
-                      <p class="username">${data.text}</p>
-                  </div>`;
-          } else {
-              // Message de l'autre utilisateur
-              messageContainer.classList.add("chat-message-container");
-              messageContainer.innerHTML = `
-                  <div class="chat-message">
-                      ${timeElement}
-                      <span class="username">${senderName}:</span>
-                      <p class="username">${data.text}</p>
-                  </div>`;
-          }
+    //       if (data.sender_id === user_id) {
+            
+    //           messageContainer.classList.add("chat-message-container-you");
+    //           messageContainer.innerHTML = `
+    //               <div class="chat-message you">
+    //                   ${timeElement}
+    //                   <span class="username">(You) ${senderName}:</span>
+    //                   <p class="username">${data.text}</p>
+    //               </div>`;
+    //       } else {
+            
+    //           messageContainer.classList.add("chat-message-container");
+    //           messageContainer.innerHTML = `
+    //               <div class="chat-message">
+    //                   ${timeElement}
+    //                   <span class="username">${senderName}:</span>
+    //                   <p class="username">${data.text}</p>
+    //               </div>`;
+    //       }
 
-          document.getElementById("messages").appendChild(messageContainer);
-          window.scrollTo(0, document.body.scrollHeight);
-      });
+    //       document.getElementById("messages").appendChild(messageContainer);
+    //       window.scrollTo(0, document.body.scrollHeight);
+    //   });
 
-      function formatDateToLocalTime(utcDateString) {
-          var localDate = new Date(utcDateString);
-          return localDate.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
-      }
+    //   function formatDateToLocalTime(utcDateString) {
+    //       var localDate = new Date(utcDateString);
+    //       return localDate.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
+    //   }
+
+
+    //   document.addEventListener('DOMContentLoaded', (event) => {
+    //     const messages = document.getElementById('messages');
+        
+    // });
     </script>
 
     <div id="account-info-popup" class="popup hidden">
