--- a/alpha/flaskr/static/css/page-discussion.css
+++ b/alpha/flaskr/static/css/page-discussion.css
@@ -380,3 +380,28 @@ body.dark .chat-message{
     width: 100vw; /* prendre la largeur de la page */
     transform: translateX(-100%); /* déplacer la ligne vers la gauche de la page */
   }
+  .message:first-child {
+    border-end-end-radius: 4px;
+  }
+  
+  .message:last-child {
+    border-start-end-radius: 4px;
+  }
+  
+  .message:not(:first-child):not(:last-child) {
+    border-start-end-radius: 4px;
+    border-end-end-radius: 4px;
+  }
+  
+  .response:first-child {
+    border-end-end-radius: 4px;
+  }
+  
+  .response:last-child {
+    border-start-end-radius: 4px;
+  }
+  
+  .response:not(:first-child):not(:last-child) {
+    border-start-end-radius: 4px;
+    border-end-end-radius: 4px;
+  }
