--- a/alpha/flaskr/templates/quests.html
+++ b/alpha/flaskr/templates/quests.html
@@ -6,6 +6,10 @@
     <title>E-Spirit album</title>
     <link rel="stylesheet" type="text/css" href="../static/css/quests.css">
     <link rel="icon" type="image/png" href="../static/img/logo_E-esprit.png">
+    <script src="https://cdn.socket.io/4.6.0/socket.io.min.js"></script>
+    <script>
+        var current_user = { id: {{ current_user.id | tojson }} };
+    </script>
     <script src="../static/js/main.js"></script>
     <script src="../static/js/album.js"></script>
     <script src="../static/js/theme.js"></script>
@@ -447,6 +451,7 @@
         }
     }
     </script>
+    <script src="{{ url_for('static', filename='js/online.js') }}"></script>  
 </body>
 </html>
 
