--- a/alpha/flaskr/templates/chat.html
+++ b/alpha/flaskr/templates/chat.html
@@ -9,6 +9,10 @@
     <script src="../static/js/main.js"></script>
     <script src="../static/js/theme.js"></script> 
     <script src="../static/js/profil.js"></script>
+    <script src="https://cdn.socket.io/4.6.0/socket.io.min.js"></script>
+    <script>
+        var current_user = { id: {{ current_user.id | tojson }} };
+    </script>
 </head>
 <body class="slide-out" data-page="page3">
     <header>
@@ -72,5 +76,6 @@
             <p id="userPrenom">Prénom : ...</p>
         </div>
     </div>   
+    <script src="{{ url_for('static', filename='js/online.js') }}"></script>
 </body>
 </html>
