--- a/alpha/flaskr/templates/demandes_amis.html
+++ b/alpha/flaskr/templates/demandes_amis.html
@@ -6,6 +6,10 @@
     <title>E-Spirit Amis</title>
     <link rel="stylesheet" type="text/css" href="../static/css/page-amis.css">
     <link rel="icon" type="image/png" href="../static/img/logo_E-esprit.ico">
+    <script src="https://cdn.socket.io/4.6.0/socket.io.min.js"></script>
+    <script>
+        var current_user = { id: {{ current_user.id | tojson }} };
+    </script>
     <script src="../static/js/main.js"></script>
     <script src="../static/js/theme.js"></script>
     <script src="../static/js/ami.js"></script>
@@ -27,3 +31,4 @@
     {% endfor %}
 </div>
 {% endblock %}
+<script src="{{ url_for('static', filename='js/online.js') }}"></script>  
