--- a/alpha/flaskr/static/css/page-discussion.css
+++ b/alpha/flaskr/static/css/page-discussion.css
@@ -178,7 +178,7 @@ body.popup-open {
 }
   
 .chat-input-container {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
@@ -190,7 +190,8 @@ body.popup-open {
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-  
+
+
 body.dark .chat-input-container{
     background-color: #333;
 }
@@ -309,99 +310,54 @@ body.dark .chat-message{
 
   .centered-blocks {
     position: absolute;
-    top: 100px; /* ajuster la distance par rapport au haut de la page */
+    top: 75px;
     left: 0;
     right: 0;
     display: flex;
-    flex-direction: column; /* définir la direction des éléments */
+    flex-direction: column;
     align-items: center;
+    padding: 20px;
+    gap: 10px;
+    padding-bottom: 80px;
   }
   
   .block {
-    width: 50px; /* largeur des blocks */
-    height: 50px; /* hauteur des blocks */
-    margin: 20px 10px; /* espace entre les blocks (20px en haut et en bas, 10px à gauche et à droite) */
-    border-radius: 10px; /* arrondir les coins */
-    position: relative; /* pour positionner les lignes */
+    background-color: #f0f0f0;
+    padding: 10px;
+    border-radius: 10px;
+    max-width: 40%; /* largeur maximale du block */
+    display: inline-block; /* pour que le block prenne la largeur du texte */
   }
   
-  .block::before {
-    content: "";
+  .block.message {
+    background-color: #aaaaaab4;
+    border-bottom: 1px solid #ccc;
+    margin-right: auto; /* pour aligner à gauche */
+  }
+  
+  .block.response {
+    background-color: #eee;
+    border-bottom: 1px solid #ccc;
+    margin-left: auto; /* pour aligner à droite */
+    background-color: #3a12ff;
+    background-image: linear-gradient(#2e89ff, #0038d3fd);
+  }
+  
+  .block span {
+    font-size: 14px;
+    color: white;
+  }
+
+
+
+
+  .back-button {
+    background-color: transparent;
+    border: none;
+    padding: 10px;
+    font-size: 24px;
+    cursor: pointer;
     position: absolute;
-    top: 0;
-    left: 0; /* déplacer la ligne vers la gauche */
-    width: 100vw; /* prendre la largeur de la page */
-    height: 2px; /* épaisseur de la ligne */
-    background-color: blue; /* couleur de la ligne */
-  }
-  
-  .block::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0; /* déplacer la ligne vers la gauche */
-    width: 100vw; /* prendre la largeur de la page */
-    height: 2px; /* épaisseur de la ligne */
-    background-color: blue; /* couleur de la ligne */
-  }
-  
-  .message {
-    background-color: green;
-    align-self: flex-start; /* positionner le block à gauche */
-  }
-  
-  .response {
-    background-color: red;
-    align-self: flex-end; /* positionner le block à droite */
-  }
-  
-  .message::before {
-    background-color: yellow;
-    left: 0; /* déplacer la ligne vers la gauche */
-    width: 100vw; /* prendre la largeur de la page */
-  }
-  
-  .response::before {
-    background-color: orange;
-    left: 0; /* déplacer la ligne vers la gauche */
-    width: 100vw; /* prendre la largeur de la page */
-    transform: translateX(-100%); /* déplacer la ligne vers la gauche de la page */
-  }
-  
-  .message::after {
-    background-color: yellow;
-    left: 0; /* déplacer la ligne vers la gauche */
-    width: 100vw; /* prendre la largeur de la page */
-  }
-  
-  .response::after {
-    background-color: orange;
-    left: 0; /* déplacer la ligne vers la gauche */
-    width: 100vw; /* prendre la largeur de la page */
-    transform: translateX(-100%); /* déplacer la ligne vers la gauche de la page */
-  }
-  .message:first-child {
-    border-end-end-radius: 4px;
-  }
-  
-  .message:last-child {
-    border-start-end-radius: 4px;
-  }
-  
-  .message:not(:first-child):not(:last-child) {
-    border-start-end-radius: 4px;
-    border-end-end-radius: 4px;
-  }
-  
-  .response:first-child {
-    border-end-end-radius: 4px;
-  }
-  
-  .response:last-child {
-    border-start-end-radius: 4px;
-  }
-  
-  .response:not(:first-child):not(:last-child) {
-    border-start-end-radius: 4px;
-    border-end-end-radius: 4px;
+    left: 15px;
+    transform: rotateY(180deg);
   }
