--- a/alpha/flaskr/templates/discussion.html
+++ b/alpha/flaskr/templates/discussion.html
@@ -12,208 +12,125 @@
 </head>
 <body>
     <header>
-        <button class="back-button" onclick="pagechat()">➔</button> <!-- bouton avec la flèche, décalé légèrement vers la droite -->
-        <img src="data:image/png;base64,{{ avatar_data.avatar }}" alt="Photo" class="ta-pp" style="margin-left: 40px;"> <!-- ajout d'un margin-left pour décaler la photo -->
+        <button class="back-button" onclick="pagechat()">➔</button>
+        <img src="data:image/png;base64,{{ avatar_data.avatar }}" alt="Photo" class="ta-pp" style="margin-left: 40px;">
         <div class="Name-page" style="margin-left: 40px;">
-            <span>Chat avec {{ current_user.username }}</span> <!-- ajout du texte "Chat avec" suivi du nom d'utilisateur -->
+            <span>Chat avec {{ current_user.username }}</span>
         </div>
     </header>
 
-    <!-- <ul id="messages" class="p-3">
+    <ul id="messages" class="p-3">
         {% for message in messages %}
             {% if message.sender_id == current_user.id %}
-                >
-                <div class="chat-message-container-you">
-                    <div class="chat-message you">
-                        <small class="username">{{ message.format_created_at() }}</small>
-                        <span class="username">(You) {{ message.sender.username }}:</span>
-                        <p class="username">{{ message.text }}</p>
+                <div class="centered-blocks">
+                    <div class="block response">
+                        <span>{{ message.format_created_at() }}</span>
+                        <span>(You) {{ message.sender.username }}:</span>
+                        <span>{{ message.text }}</span>
                     </div>
                 </div>
             {% else %}
-                
                 <div class="chat-message-container">
-                    <div class="chat-message">
-                        <small class="username">{{ message.format_created_at() }}</small>
-                        <span class="username">{{ message.sender.username }}:</span>
-                        <p class="username">{{ message.text }}</p>
+                    <div class="block message">
+                        <small>{{ message.format_created_at() }}</small>
+                        <span>{{ message.sender.username }}:</span>
+                        <span>{{ message.text }}</span>
                     </div>
                 </div>
             {% endif %}
         {% endfor %}
-    </ul> -->
-
-
-
-    <div class="centered-blocks">
-        <div class="block message">
-          <span>14:32</span> <span>John</span> <span>Bonjour, comment vas-tu?</span>
-        </div>
-        <div class="block response">
-          <span>14:35</span> <span>(You) Alice</span> <span>Je vais bien, merci! Et toi?</span>
-        </div>
-        <div class="block response">
-          <span>14:40</span> <span>(You) Alice</span> <span>J'ai passé une bonne journée aujourd'hui.</span>
-        </div>
-        <div class="block message">
-          <span>14:45</span> <span>John</span> <span>C'est super! Qu'as-tu fait?</span>
-        </div>
-        <div class="block message">
-          <span>14:50</span> <span>John</span> <span>J'ai envie de sortir ce week-end.</span>
-        </div>
-        <div class="block message">
-          <span>14:55</span> <span>John</span> <span>Tu veux venir avec moi?</span>
-        </div>
-        <div class="block response">
-          <span>15:00</span> <span>(You) Alice</span> <span>Oui, je serais ravi de venir!</span>
-        </div>
-        <div class="block response">
-          <span>15:05</span> <span>(You) Alice</span> <span>Quels sont les plans?</span>
-        </div>
-        <div class="block message">
-          <span>15:10</span> <span>John</span> <span>Nous allons aller au parc.</span>
-        </div>
-        <div class="block message">
-          <span>15:15</span> <span>John</span> <span>Il fait beau aujourd'hui.</span>
-        </div>
-        <div class="block response">
-          <span>15:20</span> <span>(You) Alice</span> <span>Oui, c'est vrai! Je suis impatient.</span>
-        </div>
-        <div class="block response">
-          <span>15:25</span> <span>(You) Alice</span> <span>Je vais aller me préparer.</span>
-        </div>
-        <div class="block response">
-          <span>15:30</span> <span>(You) Alice</span> <span>À tout à l'heure!</span>
-        </div>
-        <div class="block message">
-          <span>15:35</span> <span>John</span> <span>À tout à l'heure!</span>
-        </div>
-        <div class="block message">
-          <span>15:40</span> <span>John</span> <span>Je suis impatient de voir ce que nous allons faire.</span>
-        </div>
-        <div class="block message">
-          <span>15:45</span> <span>John</span> <span>J'espère que le temps sera beau.</span>
-        </div>
-        <div class="block response">
-          <span>15:50</span> <span>(You) Alice</span> <span>Moi aussi!</span>
-        </div>
-        <div class="block response">
-          <span>15:55</span> <span>(You) Alice</span> <span>Je vais aller acheter des sandwichs.</span>
-        </div>
-      </div>
-
-
-    
+    </ul>
 
     <div class="chat-input-container">
-        <label for="image-input">
-          <button class="chat-send-button">
-              <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M2.5 0.5h10l2 2v10l-2 2h-10l-2-2v-10l2-2zm0 1l-1 1v10l1 1h10l1-1v-10l-1-1h-10zm4.5 1c1.374 0 2.5 1.126 2.5 2.5s-1.126 2.5-2.5 2.5-2.5-1.126-2.5-2.5 1.126-2.5 2.5-2.5zm0 1c-.828 0-1.5.672-1.5 1.5s.672 1.5 1.5 1.5 1.5-.672 1.5-1.5-.672-1.5-1.5-1.5zm-2 7c-.166 0-.328.03-.477.084-.296.103-.582.306-.8.616-.217.311-.423.735-.423 1.3h7.4c0-.565-.206-.989-.423-1.3-.218-.31-.504-.513-.8-.616-.149-.054-.311-.084-.477-.084h-3zm1.478 1c.069.002.219.009.477.116.258.107.482.274.646.5h-2.246c.164-.226.388-.393.646-.5.258-.107.408-.114.477-.116z" fill="currentColor"></path>
-              </svg>
-          </button>
-        </label>
         <input class="chat-input" type="text" placeholder="Tapez votre message...">
-        <label for="input-btn">
-            <button class="chat-send-button" id="input-btn">
-                <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M1.20308 1.04312C1.00481 0.954998 0.772341 1.0048 0.627577 1.16641C0.482813 1.32802 0.458794 1.56455 0.568117 1.75196L3.92115 7.50002L0.568117 13.2481C0.458794 13.4355 0.482813 13.672 0.627577 13.8336C0.772341 13.9952 1.00481 14.045 1.20308 13.9569L14.7031 7.95693C14.8836 7.87668 15 7.69762 15 7.50002C15 7.30243 14.8836 7.12337 14.7031 7.04312L1.20308 1.04312ZM4.84553 7.10002L2.21234 2.586L13.2689 7.50002L2.21234 12.414L4.84552 7.90002H9C9.22092 7.90002 9.4 7.72094 9.4 7.50002C9.4 7.27911 9.22092 7.10002 9 7.10002H4.84553Z" fill="currentColor" fill-rule="evenodd" clip-rule="evenodd"></path>
-                </svg>
-            </button>
-        </label>
+        <button class="chat-send-button" id="input-btn">
+            <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1.20308 1.04312C1.00481 0.954998 0.772341 1.0048 0.627577 1.16641C0.482813 1.32802 0.458794 1.56455 0.568117 1.75196L3.92115 7.50002L0.568117 13.2481C0.458794 13.4355 0.482813 13.672 0.627577 13.8336C0.772341 13.9952 1.00481 14.045 1.20308 13.9569L14.7031 7.95693C14.8836 7.87668 15 7.69762 15 7.50002C15 7.30243 14.8836 7.12337 14.7031 7.04312L1.20308 1.04312ZM4.84553 7.10002L2.21234 2.586L13.2689 7.50002L2.21234 12.414L4.84552 7.90002H9C9.22092 7.90002 9.4 7.72094 9.4 7.50002C9.4 7.27911 9.22092 7.10002 9 7.10002H4.84553Z" fill="currentColor" fill-rule="evenodd" clip-rule="evenodd"></path>
+            </svg>
+        </button>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.2.0/socket.io.js"></script>
     <script>
         window.addEventListener('load', function() {
-    const centeredBlocks = document.querySelector('.centered-blocks');
-    centeredBlocks.scrollTop = centeredBlocks.scrollHeight;
-    });
+            const centeredBlocks = document.querySelector('.centered-blocks');
+            if (centeredBlocks) {
+                centeredBlocks.scrollTop = centeredBlocks.scrollHeight;
+            }
+        });
 
+        var socket = io();
+        var user_id = "{{ current_user.id }}";  
+        var userNames = {};  
 
-    //   var socket = io();
-    //   var user_id = "{{ current_user.id }}";  
-    //   var userNames = {};  
+        function loadUserNames() {
+            fetch("/api/usernames") 
+                .then(response => response.json())
+                .then(data => {
+                    userNames = data;
+                });
+        }
 
-      
-    //   function loadUserNames() {
-    //       fetch("/api/usernames") 
-    //           .then(response => response.json())
-    //           .then(data => {
-    //               userNames = data;
-    //           });
-    //   }
+        loadUserNames();
 
-    //   loadUserNames();
+        var input = document.querySelector(".chat-input");
+        var sendButton = document.getElementById("input-btn");
 
-    //   var input = document.querySelector(".chat-input");
-    //   var sendButton = document.getElementById("input-btn");
+        function sendMessage() {
+            if (input.value.trim() !== "") {
+                socket.emit("message", {
+                    text: input.value,
+                    sender_id: user_id,
+                    receiver_id: "{{ user_id }}"
+                });
+                input.value = "";
+            }
+        }
 
-    //   function sendMessage() {
-    //       if (input.value.trim() !== "") {
-    //           socket.emit("message", {
-    //               text: input.value,
-    //               sender_id: user_id,
-    //               receiver_id: "{{ user_id }}"  
-    //           });
-    //           input.value = "";
-    //       }
-    //   }
+        sendButton.addEventListener("click", function (e) {
+            e.preventDefault();
+            sendMessage();
+        });
 
-   
-    //   sendButton.addEventListener("click", function (e) {
-    //       e.preventDefault();
-    //       sendMessage();
-    //   });
+        input.addEventListener("keypress", function (e) {
+            if (e.key === "Enter") {
+                e.preventDefault();
+                sendMessage();
+            }
+        });
 
-
-    //   input.addEventListener("keypress", function (e) {
-    //       if (e.key === "Enter") {
-    //           e.preventDefault();
-    //           sendMessage();
-    //       }
-    //   });
-
-    //   socket.on("message", function (data) {
-    //       var messageContainer = document.createElement("div");
-    //       var currentTime = formatDateToLocalTime(data.created_at);
-    //       var senderName = userNames[data.sender_id] || "Unknown";
-    //       var timeElement = "<small class='username'>" + currentTime + "</small>";
-          
-    //       if (data.sender_id === user_id) {
+        socket.on("message", function (data) {
+            var messageContainer = document.createElement("div");
+            var currentTime = formatDateToLocalTime(data.created_at);
+            var senderName = userNames[data.sender_id] || "Unknown";
+            var timeElement = "<span class='username'>" + currentTime + "</span>";
             
-    //           messageContainer.classList.add("chat-message-container-you");
-    //           messageContainer.innerHTML = `
-    //               <div class="chat-message you">
-    //                   ${timeElement}
-    //                   <span class="username">(You) ${senderName}:</span>
-    //                   <p class="username">${data.text}</p>
-    //               </div>`;
-    //       } else {
-            
-    //           messageContainer.classList.add("chat-message-container");
-    //           messageContainer.innerHTML = `
-    //               <div class="chat-message">
-    //                   ${timeElement}
-    //                   <span class="username">${senderName}:</span>
-    //                   <p class="username">${data.text}</p>
-    //               </div>`;
-    //       }
+            if (data.sender_id === user_id) {
+                messageContainer.classList.add("block", "response");
+                messageContainer.innerHTML = `
+                    <div class="block response">
+                        ${timeElement}
+                        <span>(You) ${senderName}:</span>
+                        <span>${data.text}</span>
+                    </div>`;
+            } else {
+                messageContainer.classList.add("block", "message");
+                messageContainer.innerHTML = `
+                    <div class="block message">
+                        ${timeElement}
+                        <span>${senderName}:</span>
+                        <span>${data.text}</span>
+                    </div>`;
+            }
 
-    //       document.getElementById("messages").appendChild(messageContainer);
-    //       window.scrollTo(0, document.body.scrollHeight);
-    //   });
+            document.getElementById("messages").appendChild(messageContainer);
+            window.scrollTo(0, document.body.scrollHeight);
+        });
 
-    //   function formatDateToLocalTime(utcDateString) {
-    //       var localDate = new Date(utcDateString);
-    //       return localDate.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
-    //   }
-
-
-    //   document.addEventListener('DOMContentLoaded', (event) => {
-    //     const messages = document.getElementById('messages');
-        
-    // });
+        function formatDateToLocalTime(utcDateString) {
+            var localDate = new Date(utcDateString);
+            return localDate.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
+        }
     </script>
 
     <div id="account-info-popup" class="popup hidden">
