--- a/alpha/flaskr/templates/chat.html
+++ b/alpha/flaskr/templates/chat.html
@@ -28,11 +28,11 @@
 
     <dialog id="my-dialog">
         <div class="dialog-header">
-            <h2>Titre du dialogue</h2>
-            <span class="close">&times;</span>
+          <h2>Titre du dialogue</h2>
+          <span class="close" onclick="document.getElementById('my-dialog').close()">&times;</span>
         </div>
         <div class="dialog-content">
-            <p>Contenu de la fenêtre</p><!-- Contenu du dialogue -->
+          <!-- Contenu du dialogue -->
         </div>
     </dialog>
 
