--- a/alpha/flaskr/templates/chat.html
+++ b/alpha/flaskr/templates/chat.html
@@ -28,11 +28,38 @@
 
     <dialog id="my-dialog">
         <div class="dialog-header">
-          <h2>Titre du dialogue</h2>
-          <span class="close" onclick="document.getElementById('my-dialog').close()">&times;</span>
+            <div class="logo">
+                <img src="../static/img/coin_E-esprit.png" alt="Logo">
+                <span class="dots">80 (coins)</span>
+            </div>
+            <h2>Shop Principal</h2>
+            <span class="close" onclick="document.getElementById('my-dialog').close()">&times;</span>
         </div>
         <div class="dialog-content">
-          <!-- Contenu du dialogue -->
+            <!-- Contenu du dialogue -->
+            <div class="blocks-container">
+                <!-- Blocs -->
+                <div class="block">Bloc 1</div>
+                <div class="block">Bloc 2</div>
+                <div class="block">Bloc 3</div>
+                <div class="block">Bloc 4</div>
+                <div class="block">Bloc 5</div>
+                <div class="block">Bloc 6</div>
+                <div class="block">Bloc 7</div>
+                <div class="block">Bloc 8</div>
+                <div class="block">Bloc 9</div>
+                <div class="block">Bloc 10</div>
+                <div class="block">Bloc 11</div>
+                <div class="block">Bloc 12</div>
+                <div class="block">Bloc 13</div>
+                <div class="block">Bloc 14</div>
+                <div class="block">Bloc 15</div>
+                <div class="block">Bloc 16</div>
+                <div class="block">Bloc 17</div>
+                <div class="block">Bloc 18</div>
+                <div class="block">Bloc 19</div>
+                <div class="block">Bloc 20</div>
+            </div>
         </div>
     </dialog>
 
